src/core-crm/objects/Action__c/fields/Activity_Name__c.field-meta.xml
<CustomField>
    <fullName>Activity_Name__c</fullName>
    <description>Name of the activity</description>
    <label>Activity Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>