src/core-crm/objects/Action__c/fields/Consultancy__c.field-meta.xml
<CustomField>
    <fullName>Consultancy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consultancy</label>
    <referenceTo>Consultancy__c</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>