src/core-crm/objects/Action__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Date when the activity ends</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>