src/core-crm/objects/Action__c/fields/Investigation_Method__c.field-meta.xml
<CustomField>
    <fullName>Investigation_Method__c</fullName>
    <label>Investigation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Survey</fullName>
            </value>
            <value>
                <fullName>Interview</fullName>
            </value>
            <value>
                <fullName>Workshops</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>