src/core-crm/objects/Action__c/fields/Investigation_Name__c.field-meta.xml
<CustomField>
    <fullName>Investigation_Name__c</fullName>
    <label>Investigation Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>