src/core-crm/objects/Action__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Date when the activity starts</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>