src/core-crm/objects/Action__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <label>Summary</label>
    <length>75000</length>
    <type>LongTextArea</type>
</CustomField>