src/core-crm/objects/Action__c/recordTypes/Activity.recordType-meta.xml
<RecordType>
    <fullName>Activity</fullName>
    <active>true</active>
    <label>Activity</label>
</RecordType>