src/core-crm/objects/Action__c/recordTypes/Investigation.recordType-meta.xml
<RecordType>
    <fullName>Investigation</fullName>
    <active>true</active>
    <label>Investigation</label>
</RecordType>