src/core-crm/objects/Action__c/validationRules/Investigation_Summary_min_length.validationRule-meta.xml
<ValidationRule>
    <fullName>Investigation_Summary_min_length</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 RecordType.DeveloperName != &apos;Activity&apos;,
 NOT( ISBLANK(Summary__c) ) ,
 LEN(Summary__c) &lt; 20
)</errorConditionFormula>
    <errorDisplayField>Summary__c</errorDisplayField>
    <errorMessage>Must have at least 20 characters</errorMessage>
</ValidationRule>